# epochutils

./: LICENSE  README.md  pyproject.toml
.github/workflows/: run-tests.yml
docs/: airtable-upload-setup.md  upload-to-airtable.yml
epochutil/stats/: distributions.py  joint_distribution.py  misc.py
epochutils/data/: airtable.py
epochutils/stats/: distributions.py  joint_distribution.py
tests/data/: test_airtable.py
tests/stats/: conftest.py  seeds.py  test_distributions.py  test_end_to_end_conditioning.py
