[tool.poetry]
name = "epochutils"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
statsmodels = ">=0.14"
numpy = ">=1.24.2"
pandas = "^2.0.3"
scipy = ">=1.10.1,<2"
matplotlib = "^3.7.1"
copula-wrapper = "^0.1.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
