[tool.poetry]
name = "epochutils"
version = "0.1.0"
description = ""
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
statsmodels = ">=0.14"
numpy = ">=1.24.2"
pandas = "^2.0.3"
scipy = ">=1.10.1,<2"
matplotlib = "^3.7.1"
pyairtable = ">=3.0,<4"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.uv]
exclude-newer = "7 days"
