[project]
name = "epochutils"
version = "0.1.0"
description = ""
authors = []
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "statsmodels>=0.14",
    "numpy>=1.24.2",
    "pandas>=2.0.3,<3",
    "scipy>=1.10.1,<2",
    "matplotlib>=3.7.1,<4",
    "pyairtable>=3.0,<4",
]

[dependency-groups]
dev = ["pytest>=9.0.3"]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "epochutils"
module-root = ""

[tool.uv]
exclude-newer = "7 days"
